# algosignal

./: .gitignore  LICENSE.txt  Makefile  README.md  README.rst  pyproject.toml  setup.py
algosignal/: __init__.py  _algosignal.py
algosignal/finance_model/: __init__.py  _mavg.py
docs/: README.md
