[tool.poetry]
name = "algosignal"
version = "0.1.0"
description = "algorithmic trading signal generator"
authors = ["tonouchi510 <tonouchi27@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "=2.0.0-alpha0"

[tool.poetry.dev-dependencies]
pytest = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
